packages/svelte/tests/compiler-errors/samples/component-slot-duplicate-error-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'duplicate-slot-name',
		message: "Duplicate slot name 'foo' in <Nested>"
	}
});
